[metadata]
license_files = LICENSE.txt

[tool:pytest]
addopts=--capture=no
filterwarnings = error

[flake8]
ignore=F811,W503,W504  # ignore overload redefinition, allow line breaks before/after binary operators

[isort]
multi_line_output=3
include_trailing_comma=True
skip=.gitignore,__init__.py

[pylint.'MESSAGES CONTROL']
disable=import-outside-toplevel,missing-module-docstring,missing-class-docstring,missing-function-docstring,empty-docstring,import-error,too-many-arguments,arguments-differ,invalid-name,redefined-builtin
attr-rgx=[A-Za-z_][A-Za-z0-9_]*$
argument-rgx=[A-Za-z_][A-Za-z0-9_]*$
variable-rgx=[A-Za-z_][A-Za-z0-9_]*$
generated-members=torch.*
