[metadata]
license_files = LICENSE.txt

[tool:pytest]
addopts=--capture=no
filterwarnings = error

[flake8]
ignore=F811,W503,W504,W605,E203 # ignore overload redefinition, allow line breaks before/after binary operators
docstring-convention = numpy
max-line-length = 88
application_import_names = stnets
exclude = examples/*.ipynb
import_order_style = smarkets
extend-ignore = E501, F401
per-file-ignores =
    */__init__.py: F401


[isort]
multi_line_output=3
include_trailing_comma=True
profile = black
skip=.gitignore,__init__.py
