[metadata]
license_files = LICENSE.txt

[tool:pytest]
addopts=--capture=no
filterwarnings = error

[flake8]
ignore = F811, W503, W504, W605, E203
docstring-convention = numpy
max-line-length = 88
application_import_names = stnets
exclude = examples/*.ipynb, topomodelx/__init__.py, topomodelx/version.py
import_order_style = smarkets
extend-ignore = E501, F401
per-file-ignores =
    **/__init__.py: D104, F401
    topomodelx/nn/*: D100, D101, D102, D103, D104, D105, D106, D200, D201, D202, D205, D208, D209, D211, D214, D215, D400, D404, D407, D409, D411, I100, I101, I201, I202, I214
    topomodelx/nn/attention/*: D100, D101, D102, D103, D104, D106, D200, D201, D202, D205, D208, D209, D400, D404, D407, D411, I100, I201, I202, I214
    topomodelx/nn/cxn/*: D100, D101, D102, D103, D104, D106, D200, D201, D202, D204, D205, D208, D209, D400, D404, D407, D411, I100, I201, I202, I214
    test/normalization/test_normalization.py: I100, I202


[isort]
multi_line_output=3
include_trailing_comma=True
profile = black
skip=.gitignore,__init__.py
